--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
   "name": "metronome.js",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Simple metronome in node",
   "main": "metronome.js",
   "scripts": {
     "test": "mocha"
+  },
+  "bin":{
+    "metronome": "./metronome.js"
   },
   "keywords": [
     "metronome",
     "sound",
     "music"
   ],
+  "repository" :
+  { 
+    "type" : "git", 
+    "url" : "https://github.com/moharu/metronome.js.git"
+  },
   "author": "Moharu",
   "license": "ISC",
   "dependencies": {
