--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "metronome.js",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "Simple metronome in node",
   "main": "metronome.js",
   "scripts": {
@@ -14,9 +14,8 @@
     "sound",
     "music"
   ],
-  "repository" :
-  { 
-    "type" : "git", 
+  "repository" :{ 
+    "type" : "git",
     "url" : "https://github.com/moharu/metronome.js.git"
   },
   "author": "Moharu",
